@@ -1,2 +1,3 @@
 DIST smplayer2-0.7.2_p20120522.tar.xz 1034192 SHA256 ae5dfe328208dc34a53d1439a9cbc1b4f3197fca2dd6e10f2fa5725296617e49 SHA512 00cb91447d75a0a6ef9aecd98c657de7b07cc8d0c09a73ab87ffc374a048e7926fb069a234920f2eca2c02a6798473c062347d3cf0763695bb8d035bc170cdc0 WHIRLPOOL b9d36e4a5b76b8d0fb8f56047688b0ffeb19c40ee985ab3e7ad39fbefbf98cc6e3a6200f7c5d73d9b373bc791ecc06ef6a7b40b275fe67695d236547efe7d98e
 DIST smplayer2-0.7.3_p20120524.tar.xz 1033904 SHA256 36683db9a421abd4a08e2bea3708bc98d9cc8c2e91fb955c5c977c74c56e98f9 SHA512 a55454d9cef6b6c349af98e06dacb2517620068a9acad2e6f803d5111737a193e71f96082737c7621073893a1fd85d7a8193a332fde63fb69a0de6b3d4df6c08 WHIRLPOOL c2c4fb8f0e7cedc2fbbd00fcee65a39757c770a94769c7d30e5ac05f0a831a21074b712e74321e8c5c87b7bdf66d1935cb55ffea2d75805ce8198c4d9116f59e
+DIST smplayer2-0.8.0_p20121118.tar.xz 989364 SHA256 3deb2104fe863f8875f22ce123c915bdbed55a64e6aa9439312549c4cd6bed4d SHA512 0a70b90f5d8d791f7a454eebc5b936ff997c9c13cee1130c9337f3e47c9e77452596ea48e6b96bbbb598c4f53ca617b94170459af451da85aff2c2a68f97bc46 WHIRLPOOL 9a3a21a8cc6eaf388af19ccc590e3f85c46f2bfc1b77312d8ca2bfcd52a3c07e58a6c3405f7eca01e251c41c407a0e9b42a3fff2d14498b5730c55fde9d59610
