@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*smplayer2-0.8.0_p20121118 (12 Dec 2012)
+
+  12 Dec 2012; Nikoli <nikoli@lavabit.com> +smplayer2-0.8.0_p20121118.ebuild:
+  version bump
+
 *smplayer2-0.7.3_p20120524 (19 Aug 2012)
 
   19 Aug 2012; Nikoli <nikoli@lavabit.com> +smplayer2-0.7.3_p20120524.ebuild:
